@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-03-28T08:23:16Z",
+  "count" : 558,
+  "count_minmax" : [ 558, 558 ],
+  "count_prev_day_inc" : 558,
+  "count_prev_day_dec" : 0,
+  "uniques" : 7,
+  "uniques_minmax" : [ 7, 7 ],
+  "uniques_prev_day_inc" : 7,
+  "uniques_prev_day_dec" : 0
+}
