@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-28T01:24:28Z",
+  "timestamp" : "2022-03-28T08:23:16Z",
   "count_outdated" : 481,
   "uniques_outdated" : 256,
-  "count" : 1159,
-  "uniques" : 303,
+  "count" : 1717,
+  "uniques" : 310,
   "clones" : [
     {
       "timestamp": "2022-03-16T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-03-28T00:00:00Z",
+      "count": 558,
+      "count_minmax": [ 558, 558 ],
+      "uniques": 7,
+      "uniques_minmax": [ 7, 7 ]
     }
   ]
 }
