@@ -1,6 +1,6 @@
 {
-  "count": 678,
-  "uniques": 31,
+  "count": 1236,
+  "uniques": 32,
   "clones": [
     {
       "timestamp": "2022-03-16T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2022-03-27T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-03-28T00:00:00Z",
+      "count": 558,
+      "uniques": 7
     }
   ]
 }
